# Multi-Modal-RAG-System

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  PRODUCTION_READY.md  QUICKSTART.md  README.md  SYSTEM_SUMMARY.md  TEST_REPORT.md  pyproject.toml  test_system.py  ui.py
Desktop/Projects/Multi-Modal RAG System copy/app/: ingestion.py  retriever.py
Desktop/Projects/Multi-Modal RAG System copy/vector_db/: index.faiss
Desktop/Projects/untitled folder/: build_index.py  requirements.txt
Desktop/Projects/untitled folder/app/: generator.py
Desktop/Projects/untitled folder/vector_db/: metadata.pkl
app/: embedder.py  generator.py  rag_orchestrator.py
app/embeddings/: clip_embedder.py
app/generation/: multimodal_llm.py
app/vector_stores/: qdrant_store.py
app/workflows/: retrieval_graph.py
config/: system_config.py
examples/: simple_example.py
scripts/: index_documents.py  monitor_performance.py  production_rag.py
